--- a/portfolio-app/src/Public/styles/components/_AboutContent.scss
+++ b/portfolio-app/src/Public/styles/components/_AboutContent.scss
@@ -52,6 +52,7 @@
 
     .about-content{
         article{
+            
         p{
             font-size:22px;
         }
@@ -65,6 +66,12 @@
 @media(max-width: 695px){
 
     .about-content{
+        article{
+            width:75%;
+            p{
+            font-size:20px;
+            }
+        }
         img{
             width:150px;
             height:150px;
@@ -74,3 +81,35 @@
 
 }
 
+@media(max-width:425px){
+    .about-content{
+        article{
+            width: 70%;
+            p{
+                font-size:18px;
+            }
+            
+        }
+        img{
+            width:120px;
+            height:120px;
+        }
+    }
+    
+}
+
+@media(max-width:375px){
+    .about-content{
+        article{
+            p{
+                font-size:16px;
+            }
+          
+            
+        }
+        img{
+            width:110px;
+            height:110px;
+        }
+    }
+}
