--- a/portfolio-app/src/Public/styles/components/_Burger.scss
+++ b/portfolio-app/src/Public/styles/components/_Burger.scss
@@ -7,14 +7,14 @@
     height:100%;
     position:relative;
     .burger-btn{
-        background-color: #b1f1fc;
-        height:30px;
-        width:30px;
+        background-color: black;
+        height:25px;
+        width:25px;
         margin-bottom:3%;
         margin-top:3%;
         margin-left:3%;
-        // border:2px solid white;
-        // border-radius: 20%;
+        border:3px solid #b1f1fc;
+        border-radius: 20%;
     }
     .burger-nav{
         background: black;
@@ -22,9 +22,10 @@
         z-index:9;
         top:10;
         width:100%;
-        height:17vh;
+        height:18vh;
         padding-top:5px;
         padding-bottom:10px;
+        padding-left:2%;
         a{
             margin-left:2%;
             margin-top:5px;
@@ -60,7 +61,6 @@
 @media(max-width:400px){
     .burger{
         .burger-nav{
-            height:14vh;
             a{
                 font-size:18px;
             }
