--- a/portfolio-app/src/Public/styles/components/_ProjectCard.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectCard.scss
@@ -12,7 +12,7 @@
         align-items: center;
         width:90%;
         flex-basis:100%;
-        height:60vh;
+        height:70vh;
         margin-bottom:15%;
         margin-left:5%;
         margin-right:5%;
@@ -22,7 +22,7 @@
             display: block;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
             flex-basis:100%;
-            height:60vh;
+            height:70vh;
             border-radius: 15px;
             transition: all 0.8s ease;
             backface-visibility: hidden;
@@ -42,12 +42,12 @@
                     margin-bottom:10px;
                    background-color: rgb(15,15,15);
                     width:100%;
-                    font-size:40px;
+                    font-size:30px;
                 }
                 p{
                     margin-bottom:20px;
                     text-align: center;
-                    font-size:20px;
+                    font-size:18px;
                     color:black;
                 }
                 
@@ -62,14 +62,14 @@
                     color:white;
                     margin:auto;
                     width:100%;
-                    font-size:26px;
+                    font-size:20px;
                     color:black;
                 }
                 ul{
                     color:black;
                    
                     li{
-                        font-size:20px;
+                        font-size:16px;
                         list-style-type: style auto;
                     }
                 }
@@ -85,7 +85,7 @@
         .card-back{
             width:90%;
             flex-basis:100%;
-            height:60vh;
+            height:70vh;
             border-radius: 15px;
             transition: all 0.8s ease;
             backface-visibility: hidden;
@@ -95,12 +95,12 @@
             color: white;
             transform: rotateY(-180deg);
             background-color: black;
-           
+           background-color: white;
          
         }
     
     }
-    @media all and (min-width:768px)
+    @media all and (min-width:769px)
     {.card:hover{
         z-index: 9;
         .card-front{
@@ -116,34 +116,25 @@
 }
 @media(max-width:800px){
         .home-content{
-            display:flex;
-            flex-wrap:wrap;
-            align-items: center;
-            margin-top:30px;
             .card{
-                margin-bottom:15%;
-                width:90%;
-                
-                flex-basis:100%;
-                flex-wrap:nowrap;
-                height:40vh;
+                height:60vh;
                 .card-front{
                     display:inline-flex;
               
-                    width:90%;
+                    
                     flex-basis:50%;
-                    height:40vh;
+                    height:60vh;
                     article{
                         border-bottom:none;
                        
                         width:50%;
                         padding-bottom:15px;
                         h2{
-                            font-size:30px;
+                            font-size:26px;
                         }
                         p
                         {
-                            font-size:17px;
+                            font-size:16px;
                         }
 
                     }
@@ -154,29 +145,20 @@
                         width:40%;
                         h2{ 
                             padding-top:10px;
-                            color:white;
                             margin:auto;
                             margin-left:20px;
                             width:100%;
-                            font-size:26px;
-                            color:black;
                         }
-                        ul{
-                            color:black;
-                           
-                            li{
-                                font-size:17px;
-                                list-style:inside;
-                            }
-                        }
+
                     }
                 }
                 .card-back{
+
                     justify-content: center;
                     align-items:center;
                     width:90%;
                     flex-basis:100%;
-                    height:40vh;
+                    height:60vh;
                 }
             }
         }
@@ -186,17 +168,13 @@
 @media(max-width:768px){
     .home-content{     
         .card{
-        
+            margin-bottom:100px;
+            
         .card-front-mobile{
             z-index: 9;
-            width:90%;
             flex-basis:100%;
-            height:45vh;
             border-radius: 15px;
-            width: 90%;
-            padding:2rem;
-            color: white;
-            background-color: black;
+            padding:5px;
             button{
                 font-family: 'Truculenta', cursive;
                 border-radius: 15%;
@@ -223,87 +201,156 @@
         }
     }
 }
-
-@media(max-width:780px){
-    
-    .home-content{
-        padding-top:10%;
-        .card{
-            height:45vh;
-            display:flex;
-            justify-content:center;
-            align-items: center;
-            padding-bottom:20px;
-            .card-front{
-            
-                height:45vh;
-                width:70%;
-            }
-            .card-back{
-                height:45vh;
-                width:70% ;
-         
-
-            }
-            }
-        }
-    
-    
-}
-
-@media(max-width:630px){
-   
-        .home-content{
-            .card{
-                height:50vh;
-                .card-front{
-                   height:50vh;
-                }
-                .card-back{
-                    height:50vh;
-
-                }
-            }
-        }
-    
-}
-@media(max-width:555px){
-   
+@media(max-width:450px){
     .home-content{
         .card{
-            //height:20vh;
             .card-front{
-               //height:20vh;
-               article{
-                   h2{
-                       font-size:28px;
-                   }
-                   p{
-                       font-size:14px;
-                   }
-               } 
-               .tools-used{
-                
-                h2{ 
-                
-                    font-size:22px;
-                    color:black;
+                article{
+                    h2{
+                       
+                        font-size:20px;
+                    }
+                    p{
+                        font-size: 14px;
+                    }
                 }
-                ul{
-                    color:black;
-                   
-                    li{
+                .tools-used{
+                
+                    h2{ 
+                        font-size:18px;
+                        
+                    }
+                    ul{
+                       
+                        li{
+                            font-size:14px;
+                            
+                        }
+                    }
+                    button{
+                        
                         font-size:14px;
-                        list-style-type: style auto;;
                     }
                 }
             }
-            }
-            .card-back{
-                //height:20vh;
-
-            }
         }
     }
-
 }
+@media(max-width:375px){
+    .home-content{
+        .card{
+            .card-front{
+                article{
+                    h2{
+                       
+                        font-size:18px;
+                    }
+                    p{
+                        font-size: 12px;
+                    }
+                }
+                .tools-used{
+                
+                    h2{ 
+                        font-size:16px;
+                        
+                    }
+                    ul{
+                       
+                        li{
+                            font-size:12px;
+                            
+                        }
+                    }
+                    button{
+                        
+                        font-size:12px;
+                    }
+                }
+            }
+        }
+    }   
+}
+// @media(max-width:780px){
+    
+//     .home-content{
+//         padding-top:10%;
+//         .card{
+//             height:45vh;
+//             display:flex;
+//             justify-content:center;
+//             align-items: center;
+//             padding-bottom:20px;
+//             .card-front{
+            
+//                 height:45vh;
+//                 width:70%;
+//             }
+//             .card-back{
+//                 height:45vh;
+//                 width:70% ;
+         
+
+//             }
+//             }
+//         }
+    
+    
+// }
+
+// @media(max-width:630px){
+   
+//         .home-content{
+//             .card{
+//                 height:50vh;
+//                 .card-front{
+//                    height:50vh;
+//                 }
+//                 .card-back{
+//                     height:50vh;
+
+//                 }
+//             }
+//         }
+    
+// }
+// @media(max-width:555px){
+   
+//     .home-content{
+//         .card{
+//             //height:20vh;
+//             .card-front{
+//                //height:20vh;
+//                article{
+//                    h2{
+//                        font-size:28px;
+//                    }
+//                    p{
+//                        font-size:14px;
+//                    }
+//                } 
+//                .tools-used{
+                
+//                 h2{ 
+                
+//                     font-size:22px;
+//                     color:black;
+//                 }
+//                 ul{
+//                     color:black;
+                   
+//                     li{
+//                         font-size:14px;
+//                         list-style-type: style auto;;
+//                     }
+//                 }
+//             }
+//             }
+//             .card-back{
+//                 //height:20vh;
+
+//             }
+//         }
+//     }
+
+// }
