--- a/portfolio-app/src/Public/styles/components/_ProjectOneCarosel.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectOneCarosel.scss
@@ -3,18 +3,21 @@
     height: 100%;
         .Card{
             display:inline-flex;
-
+            flex-wrap:wrap;
+            a{
+                flex-basis:100%;
+            }
             .carousel-root{
                 border:2px solid white;
-                height: 60vh;
+                height: 70vh;
                 width: 100%;
                     .carousel{
                         display: none;
                         height: 100%;
                     }
                     .carousel-slider{
-                        height: 60vh;
-                    display: inline-block;
+                        height: 70vh;
+                        display: inline-block;
                     .carousel-status{
                         display: none;
                     }
@@ -33,7 +36,7 @@
                 height: 100%;
                 width: 100%;
                 figure{
-                height: 60vh;
+                height: 100vh;
                 width: 100%;
                 img{
                     width: 100%;
@@ -51,123 +54,90 @@
 }
 @media(max-width:800px){
     .project-one-carosel{
-        font-family: 'Truculenta', sans-serif;
-        height: 100%;
+
             .Card{
+                
             .carousel-root{
-                height: 40vh;
+                height: 60vh;
                 width: 100%;
-                    .carousel{
-                        display: none;
-                        height: 100%;
-                    }
-                    .carousel-slider{
-                        height: 40vh;
-                    display: inline-block;
-                    .carousel-status{
-                        display: none;
-                    }
-                    .slider-wrapper{
-                        height: 100%;
-                        width: 100%;
-                    .slider{
-                    width: 100%;
-                        .slide{
-                            height: 100px;
-                        }
-                .selected{
-                width: 100%;
-                height: 100%;
-                div{
-                height: 100%;
-                width: 100%;
-                figure{
-                height: 40vh;
-                width: 100%;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    }
-                }
-                }
-            }
-                    }
-                }
-            }
-        }
-    }
-    }
-}
-@media(max-width:780px){
-    .project-one-carosel{
-        .Card{
-            .carousel-root{
-                height: 45vh;
-                .carousel-slider{
-                    height: 45vh;
-                }
-                .selected{
-                   
-                    div{
                     
-                    figure{
-                    height: 45vh;
-                  
-                    }
-                    }
-                }
-            }
-        }
-    }
-}
-@media(max-width:630px){
-    .project-one-carosel{
-        font-family: 'Truculenta', sans-serif;
-        height: 100%;
-            .Card{
-            .carousel-root{
-                height: 50vh;
-                width: 100%;
-                    .carousel{
-                        display: none;
-                        height: 100%;
-                    }
                     .carousel-slider{
-                        height: 50vh;
-                    display: inline-block;
-                    .carousel-status{
-                        display: none;
-                    }
-                    .slider-wrapper{
-                        height: 100%;
-                        width: 100%;
-                    .slider{
-                    width: 100%;
-                        .slide{
-                            height: 100px;
-                        }
-                .selected{
-                width: 100%;
-                height: 100%;
-                div{
-                height: 100%;
-                width: 100%;
-                figure{
-                height: 50vh;
-                width: 100%;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    }
-                }
-                }
-            }
+                        height: 60vh;
+                   
                     }
                 }
             }
         }
     }
-    }
-}
+// @media(max-width:780px){
+//     .project-one-carosel{
+//         .Card{
+//             .carousel-root{
+//                 height: 45vh;
+//                 .carousel-slider{
+//                     height: 45vh;
+//                 }
+//                 .selected{
+                   
+//                     div{
+                    
+//                     figure{
+//                     height: 45vh;
+                  
+//                     }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+// @media(max-width:630px){
+//     .project-one-carosel{
+//         font-family: 'Truculenta', sans-serif;
+//         height: 100%;
+//             .Card{
+//             .carousel-root{
+//                 height: 50vh;
+//                 width: 100%;
+//                     .carousel{
+//                         display: none;
+//                         height: 100%;
+//                     }
+//                     .carousel-slider{
+//                         height: 50vh;
+//                     display: inline-block;
+//                     .carousel-status{
+//                         display: none;
+//                     }
+//                     .slider-wrapper{
+//                         height: 100%;
+//                         width: 100%;
+//                     .slider{
+//                     width: 100%;
+//                         .slide{
+//                             height: 100px;
+//                         }
+//                 .selected{
+//                 width: 100%;
+//                 height: 100%;
+//                 div{
+//                 height: 100%;
+//                 width: 100%;
+//                 figure{
+//                 height: 50vh;
+//                 width: 100%;
+//                 img{
+//                     width: 100%;
+//                     height: 100%;
+//                     object-fit: cover;
+//                     }
+//                 }
+//                 }
+//             }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     }
+// }
