--- a/portfolio-app/src/Public/styles/components/_ProjectThreeCarosel.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectThreeCarosel.scss
@@ -3,9 +3,13 @@
     height: 100%;
         .Card{
             display:inline-flex;
+            flex-wrap:wrap;
+            a{
+                flex-basis:100%;
+            }
         .carousel-root{
             border:2px solid white;
-            height: 60vh;
+            height: 70vh;
             width: 100%;
                 .carousel{
                     display: none;
@@ -13,7 +17,7 @@
                 }
                 .carousel-slider{
                 display: inline-block;
-                height:60vh;
+                height:70vh;
                 .carousel-status{
                     display: none;
                 }
@@ -25,174 +29,175 @@
                     .slide{
                         height: 200px;
                     }
-            .selected{
-            width: 100%;
-            height: 100%;
-            div{
-            height: 100%;
-            width: 100%;
-            figure{
-            height: 70vh;
-            margin: 0%;
-            width: 100%;
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                }
-            }
-            }
-        }
-                }
-            }
-        }
-    }
-    .tools-used{
-        margin-left:2%;
-        width:30%;
-        h2{
-            
-        padding-left:2%;
-            font-size:32px;
-            color:black;
-            background-color:#b1f1fc;
-            width:100%;
-            height:50px;
-        }
-        ul{
-            color:white;
-            padding-top:5%;
-            li{
-                font-size:28px;
-                list-style:disc;
-            }
-        }
-    }
-}
-}
-@media(max-width:800px){
-    .project-three-carosel{
-        font-family: 'Truculenta', sans-serif;
-        height: 100%;
-            .Card{
-            .carousel-root{
-                height: 40vh;
-                width: 100%;
-                    .carousel{
-                        display: none;
-                        height: 100%;
-                    }
-                    .carousel-slider{
-                    display: inline-block;
-                    height:40vh;
-                    .carousel-status{
-                        display: none;
-                    }
-                    .slider-wrapper{
-                        height: 100%;
-                        width: 100%;
-                    .slider{
-                    width: 100%;
-                        .slide{
-                            height: 200px;
-                        }
                 .selected{
                 width: 100%;
                 height: 100%;
-                div{
-                height: 100%;
-                width: 100%;
-                figure{
-                height: 40vh;
-                margin: 0%;
-                width: 100%;
-                img{
-                    width: 100%;
+                    div{
                     height: 100%;
-                    object-fit: cover;
+                    width: 100%;
+                    figure{
+                    height: 100vh;
+                    margin: 0%;
+                    width: 100%;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        }
                     }
                 }
-                }
-            }
-                    }
                 }
             }
         }
     }
-    }
+}
     
 }
-@media(max-width:780px){
-    .project-three-carosel{
-        .Card{
-            .carousel-root{
-                height: 45vh;
-                .carousel-slider{
-                    height: 45vh;
-                }
-                .selected{
-                   
-                    div{
-                    
-                    figure{
-                    height: 45vh;
-                  
-                    }
-                    }
-                }
-            }
-        }
-    }
 }
 
-@media(max-width:630px){
+
+@media(max-width:800px){
     .project-three-carosel{
-        font-family: 'Truculenta', sans-serif;
-        height: 100%;
+
             .Card{
+                
             .carousel-root{
-                height: 50vh;
+                height: 60vh;
                 width: 100%;
-                    .carousel{
-                        display: none;
-                        height: 100%;
-                    }
+                    
                     .carousel-slider{
-                    height:50vh;
-                    display: inline-block;
-                    .carousel-status{
-                        display: none;
-                    }
-                    .slider-wrapper{
-                        height: 100%;
-                        width: 100%;
-                    .slider{
-                    width: 100%;
-                        .slide{
-                            height: 200px;
-                        }
-                .selected{
-                width: 100%;
-                height: 100%;
-                div{
-                height: 100%;
-                width: 100%;
-                figure{
-                height: 50vh;
-                margin: 0%;
-                width: 100%;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    }
-                }
-                }
-            }
+                        height: 60vh;
+                   
                     }
                 }
             }
         }
     }
-    }
-}
+
+
+// @media(max-width:800px){
+//     .project-three-carosel{
+//         font-family: 'Truculenta', sans-serif;
+//         height: 100%;
+//             .Card{
+//             .carousel-root{
+//                 height: 40vh;
+//                 width: 100%;
+//                     .carousel{
+//                         display: none;
+//                         height: 100%;
+//                     }
+//                     .carousel-slider{
+//                     display: inline-block;
+//                     height:40vh;
+//                     .carousel-status{
+//                         display: none;
+//                     }
+//                     .slider-wrapper{
+//                         height: 100%;
+//                         width: 100%;
+//                     .slider{
+//                     width: 100%;
+//                         .slide{
+//                             height: 200px;
+//                         }
+//                 .selected{
+//                 width: 100%;
+//                 height: 100%;
+//                 div{
+//                 height: 100%;
+//                 width: 100%;
+//                 figure{
+//                 height: 40vh;
+//                 margin: 0%;
+//                 width: 100%;
+//                 img{
+//                     width: 100%;
+//                     height: 100%;
+//                     object-fit: cover;
+//                     }
+//                 }
+//                 }
+//             }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     }
+    
+// }
+// @media(max-width:780px){
+//     .project-three-carosel{
+//         .Card{
+//             .carousel-root{
+//                 height: 45vh;
+//                 .carousel-slider{
+//                     height: 45vh;
+//                 }
+//                 .selected{
+                   
+//                     div{
+                    
+//                     figure{
+//                     height: 45vh;
+                  
+//                     }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+// @media(max-width:630px){
+//     .project-three-carosel{
+//         font-family: 'Truculenta', sans-serif;
+//         height: 100%;
+//             .Card{
+//             .carousel-root{
+//                 height: 50vh;
+//                 width: 100%;
+//                     .carousel{
+//                         display: none;
+//                         height: 100%;
+//                     }
+//                     .carousel-slider{
+//                     height:50vh;
+//                     display: inline-block;
+//                     .carousel-status{
+//                         display: none;
+//                     }
+//                     .slider-wrapper{
+//                         height: 100%;
+//                         width: 100%;
+//                     .slider{
+//                     width: 100%;
+//                         .slide{
+//                             height: 200px;
+//                         }
+//                 .selected{
+//                 width: 100%;
+//                 height: 100%;
+//                 div{
+//                 height: 100%;
+//                 width: 100%;
+//                 figure{
+//                 height: 50vh;
+//                 margin: 0%;
+//                 width: 100%;
+//                 img{
+//                     width: 100%;
+//                     height: 100%;
+//                     object-fit: cover;
+//                     }
+//                 }
+//                 }
+//             }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+//     }
+// }
