--- a/portfolio-app/src/Public/styles/components/_Skills.scss
+++ b/portfolio-app/src/Public/styles/components/_Skills.scss
@@ -12,11 +12,11 @@
             margin-left:5px;
           }
           img:hover{
-          animation-duration: 2s;
-          animation-iteration-count: infinite;
-          animation-name: icon-bounce;
-          transform-origin: bottom;      
-          animation-timing-function: ease;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+            animation-name: icon-bounce;
+           // transform-origin: bottom;   //fixed bug? 
+            animation-timing-function: ease;
           }
       }
       @keyframes icon-bounce {
